--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "axios": "^1.13.1",
     "next": "16.0.1",
     "postcss": "8.5.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "tailwindcss": "^4.1.16",
-    "zod": "^3.25.76"
+    "zod": "^3.25.76",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@hookform/resolvers": "^5.2.1",
